First basic drawing functionality

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pic2Paint</title>
+    <meta charset="UTF-8">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <title>Pic2Paint - Drawing App</title>
+    <!--<link rel="stylesheet" href="../styles.css">  -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>Welcome to Pic2Paint</h1>
-  <p>This is where image-based painting will happen!</p>
+    <h1>Image-Based Drawing App</h1>    
+    <canvas id="canvas" width="800" height="600"></canvas>
+    <script src="app.js" type="application/javascript"></script>
+    
 </body>
 </html>
-
