Add first functional version with squares
This commit adds the first functional version of drawing the
corresponding parts of an image on the main canvas using the squares.
TODO: add option for choosing square or circle as a brush style.

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <br><br>
     <label for="imageInput">Picture:</label>
     <input type="file" id="imageInput" accept="image/*">
+    <br><br>
+    <canvas id="imageVisualization" width="800" height="600"></canvas>
     <script src="app.js" type="application/javascript"></script>
 </body>
 </html>
