--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
     <label for="brushSize">Brush Size:</label>
     <input type="range" id="brushSize" min="1" max="50" value="5">
     <br><br>
+    <label for="brushType">Brush Type:</label>
+    <select id="brushType">
+        <option value="continuous">Continuous</option>
+        <option value="circle">Circle</option>
+        <option value="square">Square</option>
+      </select>
+    <br><br>
     <label for="bgColor">Background Color:</label>
     <input type="color" id="bgColor" value="#ffffff">
     <br><br>
