Add checkbox for showing the image on drawing

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,12 @@
                     <label for="imageInput">Upload Image</label>
                     <input type="file" id="imageInput" accept="image/*">
                 </div>
+                <div class="control-group">
+                    <label>
+                        <input type="checkbox" id="showImageCheckbox">
+                        Show Image on Drawing
+                    </label>
+                </div>
             </div>
 
             <div class="control-section">
