--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <h2>Brush Settings</h2>
                 <div class="control-group">
                     <label for="brushSize">Brush Size</label>
-                    <input type="range" id="brushSize" min="1" max="500" value="50">
+                    <input type="range" id="brushSize" min="1" max="50" value="5">
                 </div>
                 <div class="control-group">
                     <label for="brushType">Brush Type</label>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="control-section">
-                <button id="resetButton">Reset Canvas</button>
+                <button id="resetButton">Reset Drawing</button>
             </div>
         </div>
 
@@ -101,6 +101,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2024 Pic2Paint by David Chocholatý. All rights reserved.</p>
+    </footer>
 
     <script src="app.js" type="application/javascript"></script>
 </body>
