Add Control-Z option
This commit adds the undo option for the user.

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,11 @@
             </div>
 
             <div class="control-section">
-                <button id="resetButton">Reset Drawing</button>
+                <button id="undoButton" class="btn" disabled>
+                    <span class="arrow-left"></span>
+                    Undo
+                </button>
+                <button id="resetButton" class="btn">Reset Canvas</button>
             </div>
         </div>
 
