Add pop-up window
This commit adds the pop-up window for the Clear Drawing button.

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                             <span class="arrow-right"></span>
                         </button>
                     </div>
-                    <button id="resetButton" class="btn">Reset Canvas</button>                
+                    <button id="resetButton" class="btn">Clear Drawing</button> 
                 </div>
             </div>
         </div>
