Add saving functionality
This commit adds the functionality of the saving the drawing.

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
                         Show Image on Drawing
                     </label>
                 </div>
+                <button id="saveDrawingButton" class="btn">Save Drawing</button>
             </div>
 
             <div class="control-section">
@@ -97,7 +98,7 @@
                             <span class="arrow-right"></span>
                         </button>
                     </div>
-                    <button id="resetButton" class="btn">Clear Drawing</button> 
+                    <button id="resetButton" class="btn">Clear Drawing</button>                     
                 </div>
             </div>
         </div>
