--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,23 @@
             </div>
         </div>
     </div>
+    <button class="help-button" id="helpButton" aria-label="Help">
+        <svg 
+            xmlns="http://www.w3.org/2000/svg" 
+            width="24" 
+            height="24" 
+            viewBox="0 0 24 24" 
+            fill="none" 
+            stroke="currentColor" 
+            stroke-width="2" 
+            stroke-linecap="round" 
+            stroke-linejoin="round"
+        >
+            <circle cx="12" cy="12" r="10"></circle>
+            <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
+            <line x1="12" y1="17" x2="12" y2="17"></line>
+        </svg>
+    </button>
 
     <footer class="footer">
         <p>&copy; 2024 Pic2Paint by David Chocholatý. All rights reserved.</p>
